<resources>
    <string name="app_name">SResultExample</string>

    <string name="title_main">HELLO SResult</string>
    <string name="title_progress">Loading progress: %s</string>
    <string name="button_generate">Generate Data</string>
    <string name="button_bottom_recycler">Show Bottom Recycler</string>
    <string name="button_custom_dialog">Show Custom Dialog</string>
    <string name="button_back_args">Pop to Menu with Args</string>
    <string name="button_view_pager">VP Screen</string>
    <string name="button_bottom">Bottom Screen</string>
    <string name="button_empty">Empty Screen</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_close">Close</string>
    <string name="button_profile">Show Users</string>
    <string name="button_show_horizontal">Show Horizontal</string>
    <string name="button_success">Emit Success</string>
    <string name="button_do_action">Do Action</string>
    <string name="button_state">Show State Flow</string>
    <string name="button_menu">Change Menu</string>
    <string name="button_error_handler">Error Handler</string>
    <string name="title_profile">User Profile</string>
    <string name="title_bottom_recycler">Bottom Recycler</string>
    <string name="title_empty_vm">Empty ViewModel Screen</string>
    <string name="title_state_flow">State Flow Screen</string>
    <string name="title_sustom_dialog">CUSTOM DIALOG</string>
    <string name="title_loading_progress">Progress: %s</string>
    <string name="hint_select">Selected Item Name</string>
    <string name="toast_state">This is flow toast result</string>
</resources>