<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_56dp"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            app:subtitleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/selectedTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/black"
            android:hint="@string/hint_select"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/text_size_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/recyclerBottomButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_bottom_recycler"
            android:layout_marginTop="@dimen/size_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedTV"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/customDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_custom_dialog"
            android:layout_marginTop="@dimen/size_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerBottomButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>