<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.rasalexman.sresultexample.state.StateFlowViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingDefaultResource">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            app:subtitleTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/screenDesc"
            android:text="@string/hint_loading"
            android:layout_marginHorizontal="@dimen/size_36dp"
            android:layout_marginTop="@dimen/size_24dp"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:invisible="@{vm.isLoadingInvisible}"
            tools:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_do_action"
            android:layout_marginTop="@dimen/size_16dp"
            app:onViewClick="@{() -> vm.onDoActionClicked()}"
            app:layout_constraintTop_toBottomOf="@+id/screenDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/successButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_success"
            android:layout_marginTop="@dimen/size_16dp"
            app:onViewClick="@{() -> vm.onSuccessClicked()}"
            app:layout_constraintTop_toBottomOf="@+id/actionButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_profile"
            android:layout_marginTop="@dimen/size_16dp"
            app:onViewClick="@{() -> vm.onShowAnotherFragment()}"
            app:layout_constraintTop_toBottomOf="@+id/successButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.rasalexman.sresultexample.state.StateLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            app:layout_constraintTop_toBottomOf="@+id/showButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:context="com.rasalexman.sresultexample.state.StateFlowFragment"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>