<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.rasalexman.sresultexample.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56dp"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/progressTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/black"
            android:hint="@string/app_name"
            android:layout_marginHorizontal="@dimen/size_24dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_56dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_generate"
            android:layout_marginTop="@dimen/size_24dp"
            app:onViewClick="@{() -> vm.onGenerateClicked()}"
            app:layout_constraintTop_toBottomOf="@+id/progressTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_profile"
            android:layout_marginTop="@dimen/size_16dp"
            app:onViewClick="@{() -> vm.onUsersClicked()}"
            app:layout_constraintTop_toBottomOf="@+id/generateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/stateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_state"
            android:layout_marginTop="@dimen/size_16dp"
            app:onViewClick="@{() -> vm.onStateButtonClicked()}"
            app:layout_constraintTop_toBottomOf="@+id/profileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include layout="@layout/item_filter_dropdown"
            android:id="@+id/firstDropDown"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:dropdownItems="@{vm.items}"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginHorizontal="@dimen/size_16dp"
            app:selectedItem="@{vm.selectedValue}"
            app:layout_constraintTop_toBottomOf="@+id/stateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include layout="@layout/item_filter_dropdown"
            android:id="@+id/secondDropDown"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:dropdownItems="@{vm.items2}"
            app:itemLayoutId="@{@layout/dropdown_order_popup_item}"
            android:layout_marginTop="@dimen/size_24dp"
            android:layout_marginHorizontal="@dimen/size_16dp"
            app:selectedItem="@{vm.selectedValue2}"
            app:layout_constraintTop_toBottomOf="@+id/firstDropDown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/secondDropDown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:hint="@string/title_profile"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>